add GET /gribs/{id} and Location header in post
